--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <url>http://35.227.113.12:8081/nexus/content/repositories/samplenexsus</url>
   </snapshotRepository>
     </distributionManagement>
+<dependencies>
  	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
